# email-weather

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.dev  LICENSE  README.md  docker-compose.yml  fly.toml  index.html  print.css  robots.txt  sitemap.xml  style.css
.github/workflows/: audit.yml  docs.yml  rust.yml  scheduled-audit.yml
admin-password-hash/: Cargo.toml
changelog/: index.html
deployment/: index.html
docs/: README.md  build_icons.sh  config.toml
docs/content/: _index.md  changelog.md  deployment.md  manual.md
docs/sass/: _email_block.scss  email-block.scss  print.scss  style.scss
docs/snippets/: disclaimer_license.md  london_html_body.html  london_long_plain_body.html  london_short_body.html  wmo_codes.html
docs/templates/: index.html  index_section.html  mymacros.html  print.html
docs/templates/shortcodes/: email_block.html  horizontal_scroll.html  load_snippet.html  new_email.html  response_email.html  service_email.html
fixtures/: forecast_mt_cook.json
manual/: index.html
open-meteo/: Cargo.toml
open-meteo/examples/: obtain_forecast.rs  weather_codes.rs
open-meteo/src/: level.rs  lib.rs
open-topo-data/: Cargo.toml
open-topo-data/examples/: obtain_elevation.rs
open-topo-data/src/: lib.rs
src/: email.rs  forecast_service.rs  fs.rs  gis.rs  lib.rs  main.rs  oauth2.rs  options.rs  process.rs  receive.rs  reply.rs  reporting.rs  request.rs  retry.rs  secrets.rs  serve_http.rs  smtp.rs  task.rs  time.rs  topo_data_service.rs
src/inreach/: email.rs  mod.rs  reply.rs
src/oauth2/: device.rs  installed.rs  mod.rs  service_account.rs
src/plain/: email.rs  mod.rs
src/snapshots/: email_weather__process__test__process_email_inreach_parsed_location.snap
