[package]
name = "email-weather"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-imap = { version = "0.6.0", default-features = false, features = ["runtime-tokio"]}
lettre = "0.10.1"
grib = { git = "https://github.com/noritada/grib-rs.git" }
tokio = { version = "1", features = ["full"] }
reqwest = "0.11.12"
uuid = { version = "1.1", features = ["serde"] }
urlencoding = "2.1"
eyre = "0.6"
url = "2.3"
serde_urlencoded = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
scraper = "0.13"

[dev-dependencies]
wiremock = "0.5"

[workspace]
members = ["open-meteo"]
