[package]
name = "email-weather"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-imap = { version = "0.6.0", default-features = false, features = ["runtime-tokio"]}
async-native-tls = { version = "0.4", default-features = false, features = ["runtime-tokio"] }
mail-parser = "0.6"
color-eyre = "0.6"
grib = { git = "https://github.com/noritada/grib-rs.git" }
chrono = "0.4"
chrono-tz = "0.6"
tokio = { version = "1", features = ["full"] }
reqwest = "0.11.12"
uuid = { version = "1.1", features = ["serde"] }
urlencoding = "2.1"
eyre = "0.6"
url = { version = "2.3", features = ["serde"] }
serde_urlencoded = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
scraper = "0.13"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-error = "0.2"
regex = "1.6"
yup-oauth2 = "7"
futures = "0.3"
once_cell = "1.15"
yaque = "0.6"
open-meteo = { path = "open-meteo" }

[dev-dependencies]
wiremock = "0.5"

[workspace]
members = ["open-meteo", "open-topo-data"]
