[package]
name = "email-weather"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
async-imap = { version = "0.6.0", default-features = false, features = ["runtime-tokio"]}
async-native-tls = { version = "0.4", default-features = false, features = ["runtime-tokio"] }
ansi-to-html = { version = "0.1", features = ["lazy-init"] }
oauth2 = "4.2"
axum = "0.5"
base64 = "0.13"
bcrypt = "0.13"
mail-parser = "0.7"
color-eyre = "0.6"
chrono = "0.4"
chrono-tz = "0.6" # Sticking with 0.6 until https://github.com/chronotope/chrono-tz/issues/114 is resolved.
jsonwebtoken = "8.1"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["fs"] }
reqwest = "0.11.12"
uuid = { version = "1.1", features = ["serde"] }
urlencoding = "2.1"
eyre = "0.6"
html-builder = "0.4"
http-body = "0.4"
humantime = "2.1" # TODO: remove and replace with proper localization/locale
url = { version = "2.3", features = ["serde"] }
secrecy = { version = "0.8", features = ["serde"] }
serde_urlencoded = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
scraper = "0.13"
thiserror = "1.0"
tower = "0.4"
tower-http = { version = "0.3", features = ["trace", "auth"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-error = "0.2"
# secrecy = { version = "0.8", features = ["serde"] }
sentry = "0.27"
sentry-tracing = "0.27"
regex = "1.6"
rpassword = "7.0"
futures = "0.3"
once_cell = "1.15"
yaque = "0.6"
open-meteo = { path = "open-meteo" }
native-tls = { version = "0.2", features = ["vendored"] } # use vendored for MUSL compilation

[dev-dependencies]
mockall = "0.11"
wiremock = "0.5"
insta = { version = "1.21", features = ["json"] }
approx = "0.5"

[workspace]
members = ["open-meteo", "open-topo-data", "admin-password-hash"]
