[package]
name = "open-meteo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
buildstructor = "0.5"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = { version = "0.8", features = ["serde"] }
thiserror = "1.0"
tracing = "0.1"
once_cell = "1.16"
strum = "0.24"
strum_macros = "0.24"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
